--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-fsd-lint",
   "version": "1.0.1",
-  "description": "ESLint plugin for enforcing Feature-Sliced Design architecture",
+  "description": "ESLint plugin for enforcing Feature-Sliced Design (FSD) architecture",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -12,9 +12,17 @@
   "author": "effozen",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^9.19.0"
+    "eslint": "^9.0.0"
   },
   "peerDependencies": {
     "eslint": ">=9.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/effozen/eslint-plugin-fsd-lint.git"
+  },
+  "bugs": {
+    "url": "https://github.com/effozen/eslint-plugin-fsd-lint/issues"
+  },
+  "homepage": "https://github.com/effozen/eslint-plugin-fsd-lint#readme"
 }
