--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": "effozen",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "eslint": "^9.0.0"
   },
   "peerDependencies": {
