test: Add comprehensive test suite for ESLint FSD rules
- Create modular test structure with separate files for each rule
- Add test utilities for streamlined ESLint rule testing with Vitest
- Implement extensive test cases for all FSD architecture rules
- Add validation for rule error messages and auto-fix functionality
- Configure Vitest for optimal ESLint testing environment
- Include special test cases for preserving comments in ordered-imports
- Add documentation for test patterns and expected rule behavior

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "test": "node tests/fsd-rules.test.js"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [
     "eslint",
@@ -18,7 +21,10 @@
   "author": "effozen",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^9.0.0"
+    "@typescript-eslint/parser": "^8.25.0",
+    "@vitest/ui": "^3.0.7",
+    "eslint": "^9.21.0",
+    "vitest": "^3.0.7"
   },
   "peerDependencies": {
     "eslint": ">=9.0.0"
